<resources>
    <string name="app_name">Macaron</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_weather">天气界面</string>
    <string name="message_video">视频界面</string>
    <string name="message_home">登陆界面</string>
    <string name="bottom_tab_weather">天气</string>
    <string name="bottom_tab_home">主页</string>
    <string name="bottom_tab_video">视频</string>
    <string name="account">请输入手机号/账号</string>
    <string name="password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="loginFail">无法登陆？</string>
    <string name="register">新用户注册</string>
    <string name="auto_save_password">记住密码</string>
    <string name="more">更多</string>
    <string name="tmp_unit">℃</string>
    <string name="current_PM">PM2.5</string>
    <string name="current_PM_unit">μg/m³</string>
    <string name="current_hum">湿度</string>
    <string name="current_hum_unit">%RH</string>
    <string name="gas_warning">燃气警报</string>
    <string name="fire_waring">烟雾警报</string>
    <string name="danger">危险</string>
    <string name="safe">无</string>
    <string name="location">位置:</string>
    <string name="share">分享</string>
    <string name="binaryData">扫一扫</string>
    <string name="historyData">历史数据</string>
    <string name="moreSetting">更多选项</string>
    <string name="signOut">注销登陆</string>
    <string name="futureWeather">未来天气</string>
    <string name="clickForMore">更多</string>
    <string name="homeName">用户名</string>
    <string name="historyTmp">历史温度:</string>
    <string name="settings">设置设备参数</string>
    <string name="buyMore">购买更多设备</string>
    <string name="contactUs">联系我们</string>
    <string name="moreHistoryData">更多历史数据</string>
    <string name="outsideWeather">室外温度</string>
    <string name="windInfo">风力</string>
    <string name="locationChoice">选择设备位置</string>

    <string-array name="location_values">
        <item>卧室一</item>
        <item>卧室二</item>
        <item>客厅</item>
        <item>厨房</item>
        <item>阳台</item>
        <item>走廊</item>
    </string-array>

    <string-array name="home_device_values">
        <item>卧室一</item>
        <item>卧室二</item>
        <item>客厅</item>
        <item>厨房</item>
        <item>阳台</item>
        <item>走廊</item>
    </string-array>

    <string name="title_activity_login">Macaron</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">邮箱格式都不对！</string>
    <string name="error_invalid_password">密码不可以这么短！</string>
    <string name="error_incorrect_password">你可能是输错密码的受害者！</string>
    <string name="error_field_required">这些你必须要写！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
