<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_binaryData"
        android:title="@string/binaryData"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_historyData"
        android:title="@string/historyData"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_moreSetting"
        android:title="@string/moreSetting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signOut"
        android:title="@string/signOut"
        app:showAsAction="never" />
</menu>
