<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/login_bg_color">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="286dp"
            android:layout_height="135dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:id="@+id/ly_login_info"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@color/white">

            <AutoCompleteTextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/account"
                android:textColorHint="@color/hint_color"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@null"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:textColorHint="@color/hint_color"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@null"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/btn_sets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_loginIn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textStyle="italic"
            android:background="@color/login_button_blue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="viewOnClick"/>

        <TextView
            android:id="@+id/tv_loginFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginFail"
            android:textColor="@color/login_button_blue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="viewOnClick"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/login_button_blue"
            android:onClick="viewOnClick"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</LinearLayout>
