<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_tab_bottom"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bottom_tab_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp" >

        <LinearLayout
            android:id="@+id/tab_bottom_weather"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab_bottom_weather"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:clickable="false"
                android:layout_weight="1"
                android:src="@drawable/weather_l" />

            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_tab_weather"
                android:textColor="#00bfff"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_bottom_video"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab_bottom_video"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="#0000"
                android:clickable="false"
                android:layout_weight="1"
                android:src="@drawable/video_h" />

            <TextView
                android:id="@+id/tv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_tab_video"
                android:textColor="#ff666666"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_bottom_home"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab_bottom_home"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="#0000"
                android:clickable="false"
                android:layout_weight="1"
                android:src="@drawable/home_h" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_tab_home"
                android:textColor="#ff666666"/>
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="183dp" />

</RelativeLayout>
